[package]
name = "ICT_utils"
version = "2.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[[bin]]
name = "auth_manager"
path = ".\\crates\\auth_manager\\src\\main.rs"

[[bin]]
name = "analysis"
path = ".\\crates\\analysis\\src\\main.rs"

[[bin]]
name = "log_reader"
path = ".\\crates\\log_reader\\src\\main.rs"

[[bin]]
name = "traceability-client"
path = ".\\crates\\traceability-client\\src\\main.rs"

[[bin]]
name = "traceability-server"
path = ".\\crates\\traceability-server\\src\\main.rs"

[[bin]]
name = "query"
path = ".\\crates\\query\\src\\main.rs"

[build-dependencies]
embed-resource = "2.3"

[dependencies]
eframe = "=0.30"
egui = "=0.30"
egui_extras = { version = "=0.30", features = ["all_loaders", "datepicker"] }
egui_plot = "=0.30"
egui-dropdown = "0"
image = { version = "0", features = ["png"] }
env_logger = "0"
log = "0"
rfd = "0"
chrono = "0"
rust_xlsxwriter = { version = "0", features = ["chrono"] }
anyhow = "1"
once_cell = "1"
tiberius = { version = "0", features = ["all"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["compat"] }
tokio-stream = "0"
tray-item = "0"
pwhash = "1"
winsafe = { version = "0", features = ["gui"] }
roxmltree = "0"
rust-ini = "0"
encoding_rs = "0"

ICT_log_file = { path = ".\\crates\\log_file"}
ICT_config = { path = ".\\crates\\config"}
ICT_auth = { path = ".\\crates\\auth"}

