[package]
name = "SMT_utils"
version = "2.12.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[[bin]]
name = "aoi_uploader"
path = ".\\crates\\aoi_uploader\\src\\main.rs"

[[bin]]
name = "spi_uploader"
path = ".\\crates\\spi_uploader\\src\\main.rs"

[[bin]]
name = "auth_manager"
path = ".\\crates\\auth_manager\\src\\main.rs"

[[bin]]
name = "analysis"
path = ".\\crates\\analysis\\src\\main.rs"

[[bin]]
name = "ccl5_uploader"
path = ".\\crates\\ccl5_uploader\\src\\main.rs"

[[bin]]
name = "ccl_interlock"
path = ".\\crates\\ccl_interlock\\src\\main.rs"

[[bin]]
name = "log_reader"
path = ".\\crates\\log_reader\\src\\main.rs"

[[bin]]
name = "smt_yield"
path = ".\\crates\\smt_yield\\src\\main.rs"

[[bin]]
name = "traceability-client"
path = ".\\crates\\traceability-client\\src\\main.rs"

[[bin]]
name = "traceability-server"
path = ".\\crates\\traceability-server\\src\\main.rs"

[[bin]]
name = "query"
path = ".\\crates\\query\\src\\main.rs"

[build-dependencies]
embed-resource = "2.3"

[dependencies]
eframe = "0"
egui = "0"
egui_extras = { version = "0", features = ["all_loaders", "datepicker"] }
egui_plot = "0"
egui-dropdown = "0"
image = { version = "0", features = ["png"] }
env_logger = "0"
log = "0"
rfd = "0"
chrono = "0"
rust_xlsxwriter = { version = "0", features = ["chrono"] }
anyhow = "1"
once_cell = "1"
tiberius = { version = "0", default-features = false, features = ["rustls", "chrono", "tds73", "winauth", "sql-browser-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["compat"] }
tokio-stream = "0"
tray-item = "0"
pwhash = "1"
winsafe = { version = "0", features = ["gui"] }
roxmltree = "0"
rust-ini = "0"
encoding_rs = "0"
serialport = "4.7.2"
fern = "0.7.1"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

ICT_log_file = { path = ".\\crates\\log_file"}
ICT_config = { path = ".\\crates\\config"}
ICT_auth = { path = ".\\crates\\auth"}

SQL = { path = ".\\crates\\sql"}

AOI_log_file = { path = ".\\crates\\aoi_log"}
SPI_log_file = { path = ".\\crates\\spi_log"}
CCL5_log_file = { path = ".\\crates\\ccl5"}

