[package]
name = "aoi_uploader"
version = "0.1.0"
edition = "2021"

[build-dependencies]
embed-resource = "2.3"

[dependencies]
AOI_log_file = { path = "..\\aoi_log\\" }
ICT_config = { path = "..\\config"}

anyhow = "1.0.97"
chrono = "0.4.40"
env_logger = "0.11.6"
log = "0.4.26"

tiberius = { version = "0", default-features = false, features = ["rustls", "chrono", "tds73", "winauth", "sql-browser-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
tray-item = "0.10.0"
rust-ini = "0.21.1"
serde_json = "1.0.140"
