[package]
name = "CCL_interlock"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
eframe = "0"
egui = "0"
tiberius = { version = "0", default-features = false, features = ["rustls", "chrono", "tds73", "winauth", "sql-browser-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["compat"] }
anyhow = "1"
tokio-stream = "0"
log = "0"
fern = "0.7.1"

serialport = "4.7.2"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

SQL = { path = "..\\sql"}