[package]
name = "ICT_log_file"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0"
chrono = "0"
rust_xlsxwriter = { version = "0.74.0", features = ["chrono"] }

ICT_config = { path = "..\\config"}