[package]
name = "ICT_log_file"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0"
ecolor = "0"
chrono = "0"
encoding_rs = "0"
rust_xlsxwriter = { version = "0", features = ["chrono"] }
anyhow = "1"
env_logger = "0"
log = "0"

ICT_config = { path = "..\\config"}
SPI_log_file = { path = "..\\spi_log\\" }