[package]
name = "ICT_query"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
eframe = "0"
egui = "0"
env_logger = "0"
tiberius = { version = "0", default-features = false, features = ["rustls", "chrono", "tds73", "winauth", "sql-browser-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["compat"] }
anyhow = "1"
once_cell = "1"
tokio-stream = "0"
egui_extras = "0"
image = "0"
rfd = "0"

ICT_config = { path = "..\\config"}