[package]
name = "smt_yield"
version = "0.1.0"
edition = "2021"

[dependencies]
AOI_log_file = { path = "..\\aoi_log\\" }
SPI_log_file = { path = "..\\spi_log\\" }

anyhow = "1.0.97"
chrono = { version = "0.4.40" }
env_logger = "0.11.6"
log = "0.4.26"

rust-ini = "0.21.1"
tiberius = { version = "0.12.3", default-features = false, features = ["rustls", "chrono", "tds73", "winauth", "sql-browser-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
tokio-stream = "0.1.17"
serde_json = "1.0.140"

egui = { version = "0.31.1" }
eframe = { version = "0.31.1"}
egui_extras = { version = "0.31.1", features = ["datepicker"] }
strum = "0.27.1"
strum_macros = "0.27.1"

