[package]
name = "SQL"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
env_logger = "0.11.6"
log = "0.4.26"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

tiberius = { version = "0", default-features = false, features = ["rustls", "chrono", "tds73", "winauth", "sql-browser-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["compat"] }
tokio-stream = "0"