[package]
name = "traceability-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
once_cell = "1.19.0"
chrono = "0"
tiberius = "0.12.2"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tray-item = "0.10.0"
env_logger = "0"
log = "0"
pwhash = "1"
winsafe = { version = "0.0.21", features = ["gui"] }

ICT_config = { path = "..\\config"}
ICT_log_file = { path = "..\\log_file"}
ICT_auth = { path = "..\\auth"}