[package]
name = "traceability-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
once_cell = "1"
chrono = "0"
tiberius = "0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["compat"] }
tokio-stream = "0"
tray-item = "0"
env_logger = "0"
log = "0"
pwhash = "1"
winsafe = { version = "0", features = ["gui"] }

ICT_config = { path = "..\\config"}
ICT_log_file = { path = "..\\log_file"}
ICT_auth = { path = "..\\auth"}